@@ -65,7 +65,12 @@ PART
     scaleRange = 0.1, 4
     scaleMode = AVERAGE
 
-    shader = ConformalDecals/Paint/Specular
+    shader = ConformalDecals/Decal/Standard
+
+    KEYWORD { 
+      name = DECAL_SDF_ALPHA 
+      value = false
+    }
 
     TEXTURE {
       name = _Decal
@@ -108,7 +113,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 128, 2, 128, 112 
         }
       }
@@ -123,7 +128,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 256, 2, 128, 112 
         }
       }
@@ -138,7 +143,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 384, 2, 128, 112 
         }
       }
@@ -153,7 +158,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 690, 4, 330, 118 
         }
       }
@@ -168,7 +173,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 898, 4, 122, 118
         }
       }
@@ -183,7 +188,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 6, 126, 196, 132
         }
       }
@@ -198,7 +203,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 210, 122, 94, 94 
         }
       }
@@ -213,7 +218,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA {
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 8, 262, 192, 70 
         }
       }
@@ -242,7 +247,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 508, 332, 262, 112 
         }
       }
@@ -257,7 +262,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 202, 218, 164, 114 
         }
       }
@@ -272,7 +277,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 366, 218, 164, 114 
         }
       }
@@ -347,7 +352,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 326, 426, 164, 20 
         }
       }
@@ -363,7 +368,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 776, 388, 48, 48 
         }
       }
@@ -378,7 +383,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 328, 456, 48, 48 
         }
       }
@@ -393,7 +398,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 376, 456, 48, 48 
         }
       }
@@ -408,7 +413,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 424, 456, 48, 48 
         }
       }
@@ -423,7 +428,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 472, 456, 48, 48 
         }
       }
@@ -438,7 +443,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 520, 456, 48, 48 
         }
       }
@@ -453,7 +458,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 568, 456, 48, 48 
         }
       }
@@ -468,7 +473,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA {
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 614, 456, 48, 48 
         }
       }
@@ -483,7 +488,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 662, 456, 48, 48 
         }
       }
@@ -498,7 +503,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA {
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 710, 456, 48, 48 
         }
       }
@@ -513,7 +518,7 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/SpecularSDF
+          KEYWORD { name = DECAL_SDF_ALPHA }
           tile = 758, 456, 48, 48 
         }
       }
@@ -528,7 +533,10 @@ PART
       MODULE {
         IDENTIFIER { name = ModuleConformalDecal }
         DATA { 
-          shader = ConformalDecals/Paint/Diffuse
+          TEXTURE {
+            name = _SpecMap
+            remove = true
+          }
 
           tile = 826, 360, 196, 150 
           opacity = 1
