@@ -64,7 +64,7 @@ PART
     scaleMode = MINIMUM
     cutoffAdjustable = false
 
-    shader = ConformalDecals/Paint/Specular
+    shader = ConformalDecals/Decal/Standard
 
     TEXTURE {
       name = _Decal
