@@ -62,7 +62,7 @@ PART
     scaleRange = 0.05, 0.5
     cutoffAdjustable = false
 
-    shader = ConformalDecals/Paint/Specular
+    shader = ConformalDecals/Decal/Standard
 
     TEXTURE {
       name = _Decal
