@@ -53,5 +53,13 @@ PART
 
     defaultDepth = 0.2
     defaultCutoff = 0
+
+    shader = ConformalDecals/Decal/Standard
+
+    TEXTURE {
+      name = _SpecMap
+      textureUrl = ConformalDecals/Assets/Decal-Spec
+      autoScale = true
+    }
   }
 }
