@@ -14,12 +14,14 @@ namespace ConformalDecals.MaterialProperties {
         [SerializeField] protected int    _propertyID;
         [SerializeField] protected string _propertyName;
 
+        public abstract void Modify(Material material);
+
         public virtual void ParseNode(ConfigNode node) {
             if (node == null) throw new ArgumentNullException(nameof(node));
 
             PropertyName = node.GetValue("name");
         }
 
-        public abstract void Modify(Material material);
+        public virtual void Remove(Material material) { }
     }
 }
